# idle-ant

./: README.md  dev-requirements.txt  pyproject.toml  requirements.txt  stats.txt
src/: main.py  stopwatch.py
src/constants/: __init__.py
src/game/: __init__.py  game_state.py  producer.py  resource.py  upgrade.py
src/idle_ant/: main.py  stopwatch.py
src/producers/: producer.py
src/resources/: resource.py
src/shared/: __init__.py  constants.py  conversion.py
src/styles/: idle.tcss
src/tui/: example.py  idle.tcss  main.py  stopwatch.py
src/upgrades/: upgrade.py
src/widgets/: __init__.py  buttons.py  clock.py  columns.py  game_container.py  rows.py
src/widgets/containers/: __init__.py  column.py  game.py  row.py
